--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:1.0.5"
     implementation "androidx.compose.runtime:runtime-livedata:1.0.5"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
 
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
