--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,10 +66,11 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:1.0.5"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
-
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.room:room-common:2.3.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
