Add Activities:  - Add garden activity changed to composable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartFarming">
         <activity
-            android:name="com.example.smartfarming.ui.addactivities.IrrigationActivity"
+            android:name=".ui.addgarden.AddGarden"
+            android:exported="false"
+            android:label="@string/title_activity_add_garden"
+            android:theme="@style/Theme.SmartFarming" />
+        <activity
+            android:name=".ui.addactivities.IrrigationActivity"
             android:exported="false"
             android:label="@string/title_activity_irrigation"
             android:theme="@style/Theme.SmartFarming" />
         <activity
-            android:name="com.example.smartfarming.ui.addactivities.AddActivities"
+            android:name=".ui.addactivities.AddActivities"
             android:exported="false"
             android:label="@string/title_activity_add_activities"
             android:theme="@style/Theme.SmartFarming" />
         <activity
-            android:name="com.example.smartfarming.ui.adduser.AddUserActivity"
+            android:name=".ui.adduser.AddUserActivity"
             android:exported="false"
             android:label="@string/title_activity_add_user"
             android:theme="@style/Theme.SmartFarming" />
         <activity
-            android:name="com.example.smartfarming.ui.addgarden.AddGardenActivity"
+            android:name=".ui.addgarden.AddGardenActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
