--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:value="AIzaSyBptS13qjlSaFb-Yz2jtYhA-E4s2dIhVfo" />
 
     <application
+        android:name=".FarmApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
